--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,11 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-install-plugin</artifactId>
+				<version>2.5</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.3.1</version>
 				<configuration>
@@ -245,7 +250,7 @@
 					<outputFile>src/main/java/com/j256/ormlite/android/AndroidDatabaseConnection.java</outputFile>
 					<regex>true</regex>
 					<token>(VERSION__).*(__)</token>
-					<value>$1${version}$2</value>
+					<value>$1${project.version}$2</value>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -323,7 +328,8 @@
 			<artifactId>ormlite-core</artifactId>
 			<version>${ormlite-version}</version>
 			<classifier>tests</classifier>
-			<scope>test</scope>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/libs/ormlite-core.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
